# talk-booking

./: .gitlab-ci.yml
ci_cd/python/: Dockerfile
services/talk_booking/: pyproject.toml
